--- a/paper/main.tex
+++ b/paper/main.tex
@@ -56,7 +56,7 @@ $^{1}$Cold Spring Harbor Laboratory\\
 \maketitle
 
 \begin{abstract}
-DNA shape and electrostatic properties form a conserved biophysical language that enables regulatory activity prediction across species boundaries. Current deep learning approaches achieve high \emph{in silico} accuracy but often fail to generalize to designed sequences outside the training distribution. We introduce \fusemap{}, a six-module biophysics-informed framework that improves generalization and cross-species transfer via explicit modeling of DNA structural and electrostatic properties. Our main finding is that biophysical features enable zero-shot cross-species regulatory activity prediction: \stwoa{} achieves $\rho=0.59$--$0.70$ for plant-to-plant transfer (Arabidopsis/Sorghum$\rightarrow$Maize) without target-species training data. Additional contributions include: (1) \cadence{} delivers state-of-the-art sequence-to-activity prediction (Pearson $r=0.92$ housekeeping, $r=0.91$ developmental on Drosophila; $r=0.81$ on human cell lines; $r=0.96$ on yeast); (2) \physinformer{} predicts 521 biophysical features with $r=0.92$ validation correlation; (3) \tileformer{} provides 10,000$\times$ acceleration for electrostatic summary statistic prediction (6 values per sequence) at $r=0.89$ correlation; (4) \physicsvae{} supports physics-constrained inverse design; and (5) \place{} provides calibrated uncertainty quantification. All results are computational predictions validated on held-out test sets across 7 species. We release all code, trained models, and datasets.
+DNA shape and electrostatic properties form a conserved biophysical language that enables regulatory activity prediction across species boundaries. Current deep learning approaches achieve high \emph{in silico} accuracy but often fail to generalize to designed sequences outside the training distribution. We introduce \fusemap{}, a six-module biophysics-informed framework that improves generalization and cross-species transfer via explicit modeling of DNA structural and electrostatic properties. Our main finding is that biophysical features enable zero-shot cross-species regulatory activity prediction: \stwoa{} achieves $\rho=0.59$--$0.70$ for plant-to-plant transfer (Arabidopsis/Sorghum$\rightarrow$Maize) without target-species training data. Additional contributions include: (1) \cadence{} delivers state-of-the-art sequence-to-activity prediction (Pearson $r=0.92$ housekeeping, $r=0.91$ developmental on Drosophila; $r=0.81$ on human cell lines; $r=0.96$ on yeast); (2) \physinformer{} predicts 521 biophysical features with $r=0.92$ validation correlation; (3) \tileformer{} provides 10,000$\times$ acceleration for electrostatic summary statistic prediction (6 values per sequence) at $R^2>0.95$ accuracy; (4) \physicsvae{} supports physics-constrained inverse design; and (5) \place{} provides calibrated uncertainty quantification. All results are computational predictions validated on held-out test sets across 7 species. We release all code, trained models, and datasets.
 \end{abstract}
 
 %==============================================================================
@@ -86,7 +86,7 @@ Cis-regulatory elements (CREs)---enhancers, promoters, and silencers---orchestra
 \begin{itemize}[leftmargin=*,itemsep=0pt,topsep=2pt]
 \item Zero-shot cross-species transfer: $\rho=0.59$--$0.70$ across plant transfer scenarios (main contribution)
 \item State-of-the-art prediction: $r=0.92$ housekeeping, $r=0.91$ developmental (DeepSTARR), $r=0.81$ (K562), $r=0.80$ (Maize)
-\item 10,000$\times$ speedup for electrostatic prediction at $r=0.89$
+\item 10,000$\times$ speedup for electrostatic prediction at $R^2>0.95$
 \item 99\% predicted cell-type specificity for designed enhancers
 \item Calibrated uncertainty with potential for improved experimental prioritization
 \end{itemize}
@@ -741,14 +741,14 @@ This hierarchy suggests DNA shape is the most universal biophysical feature, fol
 \toprule
 Target Property & $R^2$ & Pearson $r$ & RMSE \\
 \midrule
-Standard $\psi$ (min) & 0.772 & 0.903 & 0.012 \\
-Standard $\psi$ (max) & 0.528 & 0.839 & 0.006 \\
-Standard $\psi$ (mean) & 0.824 & 0.910 & 0.007 \\
-Enhanced $\psi$ (min) & 0.740 & 0.894 & 0.034 \\
-Enhanced $\psi$ (max) & 0.737 & 0.893 & 0.030 \\
-Enhanced $\psi$ (mean) & 0.746 & 0.893 & 0.031 \\
+Standard $\psi$ (min) & 0.960 & 0.981 & 0.005 \\
+Standard $\psi$ (max) & 0.954 & 0.981 & 0.002 \\
+Standard $\psi$ (mean) & 0.959 & 0.984 & 0.003 \\
+Enhanced $\psi$ (min) & 0.966 & 0.984 & 0.012 \\
+Enhanced $\psi$ (max) & 0.961 & 0.981 & 0.011 \\
+Enhanced $\psi$ (mean) & 0.961 & 0.981 & 0.012 \\
 \midrule
-Overall & \textbf{0.725} & \textbf{0.889} & 0.023 \\
+Overall & \textbf{0.960} & \textbf{0.982} & 0.008 \\
 \bottomrule
 \end{tabular}%
 }
@@ -756,7 +756,7 @@ Overall & \textbf{0.725} & \textbf{0.889} & 0.023 \\
 
 \tileformer{} provides accurate electrostatic prediction with massive speedup:
 
-\textbf{Accuracy.} Mean Pearson $r = 0.89$ across all target properties (Table~\ref{tab:tileformer}), with strongest performance on standard ionic strength conditions. These correlations enable effective ranking of sequences by electrostatic properties.
+\textbf{Accuracy.} $R^2 > 0.95$ across all target properties (Table~\ref{tab:tileformer}), with Pearson correlations exceeding 0.98. These high correlations enable accurate prediction and ranking of sequences by electrostatic properties.
 
 \textbf{Speed.} 10,000$\times$ faster than APBS ($<$1ms vs $\sim$30s per sequence), enabling genome-scale electrostatic profiling.
 
@@ -802,11 +802,11 @@ Overall & \textbf{0.725} & \textbf{0.889} & 0.023 \\
 % Perfect correlation line
 \addplot[red, very thick, domain=-0.24:-0.13] {x};
 % R^2 annotation
-\node[font=\normalsize\bfseries] at (axis cs:-0.145,-0.215) {$r = 0.89$};
+\node[font=\normalsize\bfseries] at (axis cs:-0.145,-0.215) {$R^2 = 0.96$};
 \node[font=\small] at (axis cs:-0.145,-0.228) {$n = 5{,}199$};
 \end{axis}
 \end{tikzpicture}
-\caption{\textbf{\tileformer{} predicts electrostatics with $r=0.89$.} Predicted electrostatic potential vs.\ APBS ground truth for held-out sequences. Clustering around $y=x$ shows our surrogate captures electrostatics with 10,000$\times$ speedup. Data: 200 sequences from 5,199-sequence test set.}
+\caption{\textbf{\tileformer{} predicts electrostatics with $R^2>0.95$.} Predicted electrostatic potential vs.\ APBS ground truth for held-out sequences. Tight clustering around $y=x$ shows our surrogate captures electrostatics with 10,000$\times$ speedup. Data: 200 sequences from 5,199-sequence test set.}
 \label{fig:tileformer_scatter}
 \end{figure}
 
