--- a/paper/references.bib
+++ b/paper/references.bib
@@ -588,3 +588,14 @@
   year={2023},
   publisher={BioMed Central}
 }
+
+@article{encode2020perspectives,
+  title={Perspectives on {ENCODE}},
+  author={{ENCODE Project Consortium}},
+  journal={Nature},
+  volume={583},
+  number={7818},
+  pages={693--698},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
